<resources>
    <string name="app_name">ARlearn</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_setting">Setting</string>
    <string name="new_subject">The New Subject Arrive</string>
    //Image
    <string name="Rhinosaur">Rhinosaur</string>
    <string name="Sun">Sun</string>
    <string name="Atom">Atom</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="tab_All">All</string>
    <string name="tab_Animal">Animal</string>
    <string name="tab_Element">Element</string>
    <string name="tab_Human">Human</string>
    <string name="tab_Space">Space</string>
    <string name="title_activity_main">ARlearn</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="manage">Manage your favourite</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_AR">Pink</string>
    <string name="setting_colour">Blue</string>
    <string name="language">Language</string>
    <string name="search">Search</string>
    <string-array name="language_group">
        <item>English</item>
        <item>Chinese</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_subject">Subject</string>
    <string name="subImage">Subject Image</string>
    <string name="buttonFavourite">Add Favourite</string>
    <string name="viewAR">View AR</string>
    <string name="initial">Initial</string>

    <string name="url_getnewImage">https://arlearn.000webhostapp.com/getnewImage.php</string>
    <string name="action_refresh">Refresh</string>
    <string name="initialText">TextView</string>
    <string name="title_quiz">Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="get_startd">Get Started!</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="text_score">Score</string>
    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>

    <string name="button_OK">OK</string>

    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>

    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>

    <string name="menu_back">Vuforia Samples</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>

    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_no_ar">NoARActivity</string>
    <string name="button_noAR">No AR</string>
    <string name="no_AR">Want to change other colour? Click Below</string>
    <string name="textSpeech">Content1</string>
    <string name="textSpeech2">Content2</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="buttonOK">Go Back</string>
</resources>
