<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.arlearn.SubjectActivity"
    tools:showIn="@layout/activity_subject">

    <ImageView
        android:id="@+id/imageViewSubject"
        android:layout_width="380dp"
        android:layout_height="186dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/subImage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/initial"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/initialText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSubject" />

    <TextView
        android:id="@+id/textViewContent1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/initialText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewContent2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/initialText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent1" />

    <Button
        android:id="@+id/buttonViewAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/viewAR"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toEndOf="@+id/buttonSpeech"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/buttonSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/textSpeech"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewoutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/buttonViewAR"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/buttonSpeech"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent2" />

    <Button
        android:id="@+id/buttonSpeech2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/textSpeech2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonViewAR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSpeech"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp" />

</android.support.constraint.ConstraintLayout>
